--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": ["obsidian", "fatebook", "predictions", "forecasting"],
+	"keywords": [
+		"obsidian",
+		"fatebook",
+		"predictions",
+		"forecasting"
+	],
 	"author": "Your Name",
 	"license": "MIT",
 	"devDependencies": {
@@ -20,5 +25,8 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@codemirror/view": "^6.34.1"
 	}
 }
